syntax = "proto2";

package com.learn.netty.protobufexample;

option optimize_for = SPEED;
option java_package = "com.learn.netty.protobufexample";
option java_outer_classname = "AddressBookProtos";

message Person{
    required string name = 1;
    required int32 id = 2;
    optional string email = 3;

    enum PhoneType{
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    }

    message PhoneNumber{
        required string number = 1;
        optional PhoneType type = 2 [default = HOME];
    }

    repeated PhoneNumber phones = 4;
}
message AddressBook{
    repeated Person people = 1;
}